# neural

./: .gitignore  CMakeLists.txt  README.md
additional_software/dll_manager/: CMakeLists.txt  ProgressBarCLI.cpp  ProgressBarCLI.h  dll_manager.cpp  filesystem_interface.cpp  filesystem_interface.hpp
additional_software/dll_manager/CLI/include/: ProgressBar.h  ProgressBar.hpp  ProgressBarCLI.h
additional_software/dll_manager/CLI/src/: ProgressBar.cpp  ProgressBarCLI.cpp
additional_software/dll_manager/include/: dependents_checker.hpp  filesystem_interface.hpp
additional_software/dll_manager/src/: dependents_checker.cpp  filesystem_interface.cpp
cmake/: NeuralConfig.cmake
examples/examples_number_recognition/: main.cpp
examples/number_recognition/: CMakeLists.txt  main.cpp
include/Neural/: Perceptron.hpp
include/Neural/Activation/: Functions.h  Functions.hpp
include/Neural/Perceptron/: Layer.h  Perceptron.hpp
lib/cmake/: NeuralConfig.cmake
share/cmake/: NeuralConfig.cmake
src/Activation/: Functions.cpp
src/Perceptron/: Layer.cpp  Perceptron.cpp
